--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Push Docker Image
       run: |
-        docker push teremir90/docker-graphql:0.0.2 .
+        docker push teremir90/docker-graphql:0.0.2
       
         
         
