--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,24 +17,33 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-
+        
+    - name: Git Semantic Version
+      uses: PaulHatch/semantic-version@v4.0.3
+      with:
+        major_pattern: "major:"
+        minor_pattern: "feat:"
+        format: "${major}.${minor}.${patch}-prerelease${increment}"
+      id: version
+      
     - name: Docker login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
         echo "Iniciando login" 
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "Fin del login"
-
+        
     - name: Build Docker Image
       run: |
         echo "Construyendo imagen" 
-        docker build -t teremir90/docker-graphql:0.0.2 .
+        docker build -t teremir90/docker-graphql:$NEW_VERSION .
 
     - name: Push Docker Image
       run: |
-        docker push teremir90/docker-graphql:0.0.2
+        docker push teremir90/docker-graphql:$NEW_VERSION
       
         
         
